AUTOMAKE_OPTIONS = foreign

CFLAGS = -Wall -pedantic -O2
#include_HEADERS = bbexample.h

#lib_LTLIBRARIES = libbbexample.la
#libbbexample_la_SOURCES  = bbexamplelib.c
#libbbexample_la_LDFLAGS= -version-info 1:0:0

bin_PROGRAMS = rgb2yuv_c
rgb2yuv_c_SOURCES = rgb2yuv_c.c
#rgb2yuv_c_LDADD = libbbexample.la
